<resources tools:ignore="MissingTranslation" xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">VCash Wallet</string>

    <string name="copy_ok">Copied to clipboard</string>
    <string name="copy">Copy</string>
    <string name="exit">Please press again to exit</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="ok">OK</string>
    <string name="check">Check</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="generate">Got it</string>
    <string name="warning">Warning</string>
    <string name="wait">Waiting…</string>
    <string name="setting">Setting</string>
    <string name="save">Save</string>
    <string name="height">Height:</string>

    <string name="coinbase">CoinBase</string>
    <string name="tokenissue">TokenIssue</string>
    <string name="now">Now</string>
    <string name="unReachable">Unreachable</string>
    <string name="ongoing">Ongoing</string>
    <string name="canceled">Cancelled</string>
    <string name="confirmed">Confirmed</string>
    <string name="wait_for_process">waiting for processing</string>
    <string name="unconfirmed">Unconfirmed</string>
    <string name="available">Available</string>
    <string name="locked">Locked</string>
    <string name="pending">Pending</string>
    <string name="balance">Balance</string>
    <string name="recent_transaction">Recent transactions</string>
    <string name="receive">Receive</string>
    <string name="send">Send</string>

    <string name="transaction_details">Transaction Details</string>
    <string name="verify_signature">Sign the transaction</string>
    <string name="receive_signature">Sign the transaction</string>
    <string name="tx_status_wait_sender_sign">TX Status: waiting for the sender to sign</string>
    <string name="tx_status_wait_your_sign">TX Status: waiting for your signature</string>
    <string name="tx_status_wait_receiver_sign">TX Status: waiting for recipient to sign</string>
    <string name="tx_status_wait_confirm">TX Status: waiting for confirmation</string>
    <string name="tx_status_cancel">TX Status: transaction cancelled</string>
    <string name="tx_status_completed">TX Status: transaction completed</string>
    <string name="delete_transaction">Delete the transaction</string>
    <string name="tx_id">TXID:</string>
    <string name="sender">Sender:</string>
    <string name="recipient">Recipient:</string>
    <string name="tx_amount">TX amount:</string>
    <string name="tx_fee">TX fee:</string>
    <string name="tx_time">TX time:</string>

    <string name="create_new_wallet">Create new wallet</string>
    <string name="restore_wallet">Restore from recovery phrase</string>
    <string name="create_new_wallet_notify">By creating the wallet, you need to write down your seed phrase and store it securely so that your wallet can be recovered in the case your device was lost or stolen.</string>
    <string name="create_new_wallet_notify_1">Do not let anyone see your seed phrase.</string>
    <string name="create_new_wallet_notify_2">Never type your seed phrase into password managers or elsewhere.</string>
    <string name="create_new_wallet_notify_3">Make at least 2 copies of the phrase in case of emergency.</string>
    <string name="got_it">Got it</string>
    <string name="backup_prompt">Your seed phrase is the access key to all the funds in your wallet. Print or write down the phrase to keep it in a safe or in a locked vault. Without the phrase, you will not be able to recover your funds</string>
    <string name="save_seed_phrase">Save seed phrase</string>
    <string name="save_seed_phrase_content">Please write the seed phrase down. Do not screenshot it and save it in your photo gallery. It makes the phrase prone to cyber attacks and, less secure.</string>
    <string name="confirm_seed_phrase">Confirm seed phrase</string>
    <string name="confirm_seed_phrase_notify_1">To ensure the seed phrase is written down correctly, please fill in the specific words below.</string>
    <string name="confirm_seed_phrase_notify_2">Match the words to their due sequences</string>
    <string name="word_inconsistent">The words are inconsistent with the seed phrase.please try again</string>
    <string name="back_seed_phrase">Return to seed phrase</string>
    <string name="back_seed_phrase_content">Your current seed will become obsolete and the new seed will be generated</string>
    <string name="back_seed_phrase_message">If you return to seed phrase,it would be changed and your local password won\'t be saved</string>
    <string name="confirm_seed_phrase_success">Seed phrase confirm success</string>
    <string name="password">Password</string>
    <string name="password_create_1">Create password to access your wallet</string>
    <string name="password_create_2">You are highly recommended to set a strong password, preferably with uppercase and lowercase letters and numbers.</string>
    <string name="confirm_password">Confirm password</string>
    <string name="start_use_wallet">Start to use your wallet</string>
    <string name="change_password">Reset wallet password</string>
    <string name="save_new_password">Save new password</string>
    <string name="recover_content">Your current wallet will be logged out if you restore other wallets. Please ensure seed phrase has been correctly saved before taking actions.</string>
    <string name="storage_permission">Need Storage Permission</string>
    <string name="password_dont_match">Passwords do not match</string>
    <string name="create_wallet_success">Wallet is ready for use</string>
    <string name="create_wallet_failed">Incorrect seed phrase. Please double check and correct them.</string>
    <string name="creating_wallet">Creating wallet…</string>
    <string name="restoring_wallet">Restoring wallet…Please do not close wallet</string>
    <string name="loading_wallet">Loading wallet…</string>
    <string name="restore_success">Successful restore</string>
    <string name="restore_fail">Restore failure</string>
    <string name="wallet_mneonic_restore">This is a 24 word phrase you were given when you created your previous wallet. You can copy seed phrase from your backup.</string>
    <string name="send_vcash">Send VCash</string>
    <string name="send_to">Send to</string>
    <string name="enter_recipient_id">Input recipient’s ID or http address</string>
    <string name="amount">Amount</string>
    <string name="enter_amount">Input amount</string>
    <string name="receive_vcash">Receive VCash</string>
    <string name="receive_coins">Receive Coins</string>
    <string name="wallet_id">Your wallet ID</string>
    <string name="scan_qr_code">Or scan the QR code</string>
    <string name="general_settings">General settings</string>
    <string name="lock_screen">Lock screen</string>
    <string name="app_version">App Version</string>
    <string name="never">Never</string>
    <string name="after_30_seconds">After 30 seconds</string>
    <string name="after_1_minute">After 1 minute</string>
    <string name="after_3_minute">After 3 minutes</string>
    <string name="restore_seed_phrase">Restore from seed phrase</string>
    <string name="access_wallet">Enter your password to access the wallet</string>
    <string name="open_wallet">Open my wallet</string>
    <string name="restore_wallet_hint">Restore from recovery phrase</string>
    <string name="send_cant_0">Please send funds more than 0</string>
    <string name="send_cant_me">Please don\'t send VCash to your own wallet address</string>
    <string name="send_address_length">The address format is incorrect</string>
    <string name="psw_incorrect">Incorrect Password</string>
    <string name="old_psw_incorrect">The password you have entered is incorrect</string>
    <string name="enter_current_psw">Enter your current password</string>
    <string name="new_transaction_receiver">A new transaction is waiting for your signature</string>
    <string name="new_transaction_sender">The transaction you sent has been signed, and is waiting for your signature and confirmation.</string>
    <string name="not_process_yet">Process later</string>
    <string name="go_and_see">Go and See</string>
    <string name="cancel_transaction">Cancel the transaction</string>
    <string name="no_transaction">No transactions</string>
    <string name="support_recipient_ID">Both recipient\'s ID and "http" methods are supported.</string>
    <string name="send_transaction_file">Send VCash with transaction file</string>
    <string name="send_vcash_notify">Sending VCash or VCash Token is an interactive process that the sender and the recipient need to interact back and forth to ensure the transaction is implemented.</string>
    <string name="receive_transaction_file">Receive from transaction file</string>
    <string name="receive_transaction_file_notify">VCash or VCash Token can be received through transaction files. Copy the transaction file you got into the following form and continue.</string>
    <string name="enter_tx_file">Enter the received transaction file</string>
    <string name="read_tx_file">Read transaction details</string>
    <string name="receive_transaction_file_notify_2">Copy the signed transaction file and send it to the sender.</string>
    <string name="sign_tx_file">Signed transaction file</string>
    <string name="ongoing_tx">Pending transactions</string>
    <string name="complete_tx">Completed transactions</string>
    <string name="recover_phrase">Recover Phrase</string>
    <string name="verify_psw">Verify wallet password</string>
    <string name="backup_success">Backup successfully</string>
    <string name="backup_phrase">Backup Phrase</string>
    <string name="address_book">Address book</string>
    <string name="save_address_book">Save to address book</string>
    <string name="enable_touch_id">Enable Touch ID</string>
    <string name="copy_address">Copy address</string>

    <string name="send_success">Sent successfully</string>
    <string name="send_failed">Failed to send your transaction</string>
    <string name="receive_success">Signature completed. Waiting for sender to process</string>
    <string name="receive_failed">Failed to receive the transaction</string>
    <string name="broadcast_success">Waiting for network confirmation</string>
    <string name="broadcast_failed">Failed to broadcast the transaction</string>
    <string name="cancel_success">Cancelled successfully</string>
    <string name="cancel_failed">Failed to cancel the transaction</string>
    <string name="delete_success">Deleted successfully</string>
    <string name="delete_failed">Failed to delete the transaction</string>

</resources>
