<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_copy"
        android:layout_width="match_parent"
        android:text="@string/copy"
        android:gravity="center"
        android:textSize="15sp"
        android:textColor="@color/A1"
        android:layout_height="50dp" />

    <View
        android:layout_width="match_parent"
        android:background="@color/grey_4"
        android:layout_height="1dp"/>

    <TextView
        android:id="@+id/tv_save"
        android:layout_width="match_parent"
        android:text="@string/save_address_book"
        android:gravity="center"
        android:textSize="15sp"
        android:textColor="@color/A1"
        android:layout_height="50dp" />

    <View
        android:layout_width="match_parent"
        android:background="@color/grey_4"
        android:layout_height="1dp"/>

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:text="@string/cancel"
        android:gravity="center"
        android:textSize="15sp"
        android:textColor="@color/A1"
        android:layout_height="50dp" />

</LinearLayout>