<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="26dp"
        android:background="@drawable/bg_grey9_round_rect"
        android:lineSpacingMultiplier="1.2"
        android:padding="12dp"
        android:text="@string/send_vcash_notify"
        android:textColor="@color/A10"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingLeft="26dp"
        android:paddingRight="26dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_to"
            android:textColor="@color/A10"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical">

            <EditText
                android:id="@+id/et_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/enter_recipient_id"
                android:minHeight="40dp"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/iv_qrcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:padding="8dp"
                android:src="@drawable/ic_qrcode" />
        </LinearLayout>

        <View
            android:id="@+id/line_id"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="2dp"
            android:background="@color/grey_4" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/support_recipient_ID"
            android:textColor="@color/A1"
            android:textSize="12sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="30dp"
            android:gravity="bottom">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:textColor="@color/A10"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_available"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:textColor="#3399CC"
                android:textSize="12sp"
                tools:text="Available: 2.22222222 V" />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/et_amount"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/enter_amount"
                android:inputType="numberDecimal"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:text="VCash"
                android:textColor="@color/A10"
                android:textSize="15sp" />
        </LinearLayout>

        <View
            android:id="@+id/line_amount"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="2dp"
            android:background="@color/grey_4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="52dp"
            android:text="@string/send_transaction_file"
            android:textColor="@color/blue"
            android:textSize="15sp"
            android:visibility="gone" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/btn_send"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/bg_orange_light_round_rect">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/ic_arrow_white_up"
            android:drawablePadding="6dp"
            android:text="@string/send"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </FrameLayout>
</LinearLayout>