<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="23dp"
        android:background="@drawable/bg_grey9_round_rect"
        android:lineSpacingMultiplier="1.2"
        android:padding="12dp"
        android:text="@string/receive_transaction_file_notify"
        android:textColor="@color/A10"
        android:textSize="15sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:text="@string/enter_tx_file"
        android:textColor="@color/A1"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="14dp"
        android:background="@color/grey_4" />

    <EditText
        android:id="@+id/et_tx_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:gravity="start"
        android:minHeight="100dp"
        android:padding="20dp"
        android:textSize="14sp"
        tools:text="fnaoinfioanfinaif" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="14dp"
        android:background="@color/grey_4" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:layout_marginBottom="40dp">

        <TextView
            android:id="@+id/btn_read_tx"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_gravity="bottom"
            android:background="@drawable/bg_orange_light_round_rect"
            android:drawablePadding="6dp"
            android:gravity="center"
            android:text="@string/read_tx_file"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </FrameLayout>
</LinearLayout>