<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <android.support.v7.widget.CardView
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_width="match_parent"
        android:layout_height="134dp"
        android:background="@color/white"
        app:cardCornerRadius="6dp"
        app:cardElevation="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="134dp"
            android:orientation="vertical"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/tv_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/new_transaction_sender"
                android:textColor="@color/A4"
                android:textSize="15sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="16dp">

                <TextView
                    android:id="@+id/tv_confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:background="@drawable/selector_orange"
                    android:drawableRight="@drawable/ic_arrow_white_right"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:text="@string/go_and_see"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/tv_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginRight="18dp"
                    android:layout_toLeftOf="@+id/tv_confirm"
                    android:drawablePadding="9dp"
                    android:gravity="center_vertical"
                    android:text="@string/not_process_yet"
                    android:textColor="@color/A10" />

            </RelativeLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</FrameLayout>